--- a/src/Contact.html
+++ b/src/Contact.html
@@ -95,23 +95,24 @@
                     <form action="../paytm/" method="POST" class="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form" style="padding: 0;" source="email" name="form">
                       <div class="u-form-group u-form-name">
                         <label for="name-daf4" class="u-label">Full Name</label>
-                        <input type="text" placeholder="Enter your Name" id="name-daf4" name="FNAME" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
+                        <input type="text" placeholder="" id="name-daf4" name="FNAME" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
                       </div>
                       <div class="u-form-address u-form-group u-form-group-2">
                         <label for="address-5aff" class="u-label">Address</label>
-                        <input type="text" placeholder="Enter your address" id="address-5aff" name="ADDR" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
+                        <input type="text" placeholder="" id="address-5aff" name="ADDR" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
                       </div>
                       <div class="u-form-group u-form-phone u-form-group-3">
                         <label for="phone-1518" class="u-label">Phone</label>
-                        <input type="text" pattern="^[0-9]{10}" placeholder="Enter your phone" id="phone-1518" name="MOBI" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="" maxlength="10">
+                        <input type="text" pattern="^[0-9]{10}" placeholder="" id="phone-1518" name="MOBI" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="" maxlength="10">
                       </div>
                       <div class="u-form-email u-form-group">
                         <label for="email-daf4" class="u-label">Email</label>
-                        <input type="email" placeholder="Enter a valid email address" id="email-daf4" name="MAIL" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
+                        <input type="email" placeholder="" id="email-daf4" name="MAIL" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
                       </div>
                       <div class="u-align-left u-form-group u-form-submit">
                         <button type="submit" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-color-2 u-custom-font u-font-roboto-slab u-radius-12 u-btn-1">PAY NOW 299/-</button>
                         <input type="submit" value="submit" class="u-form-control-hidden">
+                        <span class="contact-submit-text" ><p>Once you've paid, you will receive a call between 9:00AM to 9:00PM. We will guide you, fetch your delivery details and deliver as per your preferred date & time of delivery.</p></span>
                       </div>
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
                       <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
