--- a/src/index.html
+++ b/src/index.html
@@ -513,6 +513,9 @@
           &copy; Copyright <strong><span>Slimkart</span></strong
           >. All Rights Reserved
         </div>
+        <div class="padding-top: 4px" style="text-align: center ;"><strong><span>Made By <a href="https://growmonks.in/">GrowMonks</a></span></strong>
+
+        </div>
         </div>
       </div>
     </footer>
